mobile view burger menu ui fix and dropdown button contrast fixed

--- a/src/app/predections/predections.component.css
+++ b/src/app/predections/predections.component.css
@@ -132,3 +132,45 @@ tfoot th:first-child {
       display:block !important;
   }
 }
+
+
+.btn.btn-linkedin {
+	background: top right/210% 210% space #0077b5;
+	background-image: linear-gradient(to bottom left, #0077b5, #00344f, #0077b5);
+	color: #fff
+}
+
+.btn.btn-linkedin:active,
+.btn.btn-linkedin:focus,
+.btn.btn-linkedin:hover {
+	background-color: #00669c;
+	background-image: linear-gradient(to bottom left, #0077b5, #00344f, #0077b5)!important;
+	background-image: -moz-linear-gradient(to bottom left, #0077b5, #00344f, #0077b5)!important;
+	color: #fff
+}
+
+.btn.btn-linkedin.btn-simple {
+	color: #00669c;
+	background-color: transparent;
+	background-image: none!important;
+	box-shadow: none;
+	border-color: #00669c
+}
+
+.btn.btn-linkedin.btn-simple:active,
+.btn.btn-linkedin.btn-simple:focus,
+.btn.btn-linkedin.btn-simple:hover {
+	color: #00669c;
+	border-color: #00669c
+}
+
+.btn.btn-linkedin.btn-neutral {
+	color: #0077b5;
+	background-color: #fff
+}
+
+.btn.btn-linkedin.btn-neutral:active,
+.btn.btn-linkedin.btn-neutral:focus,
+.btn.btn-linkedin.btn-neutral:hover {
+	color: #00669c
+}
